--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.exbot</groupId>
-    <artifactId>blog</artifactId>
+    <artifactId>web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>blog</name>
-    <description>exbot_blog project for Spring Boot</description>
+    <name>web</name>
+    <description>exbot_web project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
