--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+            <version>5.1.6</version>
         </dependency>
 
         <!--热部署-->
